--- a/templates/article/search.html.twig
+++ b/templates/article/search.html.twig
@@ -9,8 +9,8 @@
                 {{ include('article/_include/_article_list.html.twig') }}
             </div>
             <div class="col-md-4 d-none d-md-block card p-4">
-                <button class="btn btn-light" data-toggle="collapse" data-target="#collapseFilter">
-                    <span class="text-info">Search articles</span>
+                <button class="btn btn-light btn-block" data-toggle="collapse" data-target="#collapseFilter">
+                    <span class="text-info">{{ 'L_SEARCH_ARTICLES'|transL }}</span>
                 </button>
                 <div class="collapse my-2 {{ collapse is defined ? collapse : '' }}" id="collapseFilter">
                     {{ form_start(filter) }}
