--- a/templates/comment/edit.html.twig
+++ b/templates/comment/edit.html.twig
@@ -6,7 +6,7 @@
         {{ form_widget(form) }}
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
-        <button type="submit" class="btn btn-outline-success btn-block"><i class="fas fa-plus-circle"></i> Send</button>
+        <button type="submit" class="btn btn-outline-success btn-block"><i class="fas fa-plus-circle"></i> {{ 'L_SEND'|transL }}</button>
     </div>
 </div>
 {{ form_end(form) }}
