--- a/templates/article/_include/_article_list.html.twig
+++ b/templates/article/_include/_article_list.html.twig
@@ -2,23 +2,23 @@
     {% for article in pagination %}
         <div class="col-md-12 pb-4">
             <h3 class="font-weight-bold pb-2">
-                <a href="{{ path('article_show', {slug:article.slug}) }}" class="text-black " style="text-decoration: none;color:#0b2e13">
+                <a href="{{ path('article_show', { slug:article.slug }) }}" class="text-black " style="text-decoration: none;color:#0b2e13">
                     {{ article.title }}
                 </a>
             </h3>
             <p class="text-info small">
                 {% for tag in article.tags %}
-                    <a href="{{ path('article_by_tag', {name: tag.name}) }}" class="border px-1 rounded text-info">{{ tag.name }}</a>
+                    <a href="{{ path('article_by_tag', { name: tag.name }) }}" class="border px-1 rounded text-info">{{ tag.name }}</a>
                 {% endfor %}
             </p>
             <p>{{ article.content|truncate(400)|raw }}</p>
             <div class="clearfix">
                 <div class="float-left">
-                    <a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more&nbsp;&nbsp;<i class="fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-sm btn-outline-info" href="{{ path('article_show', { slug:article.slug }) }}" role="button">{{ 'L_READ_MORE'|transL }}&nbsp;&nbsp;<i class="fa fa-angle-double-right"></i></a>
                 </div>
                 <div class="float-right">
                     <ul class="icons-inline text-info small">
-                        <li>{{ article.author.firstname }} <a href="{{ path('user_profile', {username:article.author.username}) }}">@{{ article.author.username }}</a></li>
+                        <li>{{ article.author.firstname }} <a href="{{ path('user_profile', { username:article.author.username }) }}">@{{ article.author.username }}</a></li>
                         <li>{{ article.createdAt|date('d.m.Y') }}</li>
                         <li><i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span></li>
                         <li><i class="fas fa-eye"></i><span>{{ article.watchCount }}</span></li>
@@ -29,7 +29,7 @@
             </div>
         </div>
     {% else %}
-        <h6 class="col-md-12 pb-4">No articles found</h6>
+        <h6 class="col-md-12 pb-4">{{ 'M_NO_ARTICLES_FOUND'|transM }}</h6>
     {% endfor %}
 </div>
 {{ knp_pagination_render(pagination, null, {}, {
