--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% block title %}Welcome to Blogger!{% endblock %}</title>
+
+        {% if seo_title() %}
+            {{ seo_title() }}
+        {% else %}
+            <title>{% block title %}Welcome to Blogger!{% endblock %}</title>
+        {% endif %}
+        {{ seo_keywords() }}
+        {{ seo_description() }}
 
         <link rel="stylesheet" href="{{ asset('build/vendor.css') }}">
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
