--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,7 +1,5 @@
 {% extends 'user/_layout.html.twig' %}
 
-{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
-
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('build/css/avatar_crop.css') }}">
@@ -25,7 +23,18 @@
                 {{ form_errors(form.uploadedFile) }}
             </div>
         </div>
-        {{ form_row(form.aboutMe) }}
+        <div class="form-group row">
+            {{ form_label(form.aboutMe, '', { label_attr: { class: 'col-form-label col-sm-2' } }) }}
+            <div class="col-sm-10">
+                {{ form_errors(form.aboutMe) }}
+                {{ form_widget(form.aboutMe) }}
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-10 offset-sm-2">
+                {{ form_widget(form.save) }}
+            </div>
+        </div>
     {{ form_end(form) }}
 {% endblock %}
 
