--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% form_theme form 'bootstrap_4_layout.html.twig' %}
+{% form_theme form 'bootstrap_4_layout.html.twig' 'form/fields.html.twig' %}
 
 {% block title %}{{ title }}{% endblock %}
 
