--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -20,8 +20,7 @@
                             <li>{{ article.createdAt|date('H:i d.m.Y') }}</li>
                             <li>
                                 <a href="{{ path('api_article_bookmark', { id: article.id }) }}"
-                                   class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}"
-                                   data-token="{{ csrf_token('_api') }}">
+                                   class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}">
                                     <i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span>
                                 </a>
                             </li>
@@ -38,7 +37,7 @@
                 </p>
                 {% if is_granted('ROLE_USER') %}
                 <div class="d-flex justify-content-center">
-                    <div class="btn-group btn-group-toggle js-like" data-token="{{ csrf_token('_api') }}">
+                    <div class="btn-group btn-group-toggle js-like">
                         <a href="{{ path('api_article_like', { id: article.id }) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1">
                             <i class="fas fa-thumbs-up"></i> <span>{{ article.likeCount }}</span>
                         </a>
@@ -61,44 +60,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script>
-        $(document).ready(function () {
-            $('.js-like-btn').on('click', function (e) {
-                e.preventDefault();
-                if ($(this).hasClass('not-allowed')) return false;
-
-                let $this = $(this),
-                    $btnGroup = $this.closest('.js-like'),
-                    $like = $btnGroup.find('[data-type="1"] span'),
-                    $dislike = $btnGroup.find('[data-type="-1"] span'),
-                    token = $btnGroup.data('token')
-                ;
-
-                appGet($this.attr('href'), { token: token }).then(function(data) {
-                    if (data.type === 'success') {
-                        $like.html(data.data.likes);
-                        $dislike.html(data.data.dislikes);
-                    }
-                    notify(data.type, data.message);
-                });
-            });
-
-            $('.js-bookmark-article-btn').on('click', function (e) {
-                e.preventDefault();
-                if ($(this).hasClass('not-allowed')) return false;
-
-                let $this = $(this),
-                    $bookmarkValue = $this.find('span'),
-                    token = $this.data('token')
-                ;
-
-                appGet($this.attr('href'), { token: token }).then(function(data) {
-                    if (data.type === 'success') {
-                        $bookmarkValue.html(data.data);
-                    }
-                    notify(data.type, data.message);
-                });
-            });
-        });
-    </script>
+    <script src="{{ asset('build/js/article_show.js') }}"></script>
 {% endblock %}
