--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,7 +26,7 @@
             </div>
 
             <div class="custom-control custom-checkbox mb-4">
-                <input type="checkbox" name="_remember_me" class="custom-control-input" id="customCheck">
+                <input type="checkbox" name="_remember_me" class="custom-control-input" id="customCheck" checked>
                 <label class="custom-control-label" for="customCheck">Remember me</label>
             </div>
 
