--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('build/css/avatar_crop.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/css/user_avatar.css') }}">
 {% endblock %}
 
 {% block title %}User edit profile{% endblock %}
@@ -40,5 +40,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('build/js/avatar_crop.js') }}"></script>
+    <script src="{{ asset('build/js/user_avatar.js') }}"></script>
 {% endblock %}
