--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -13,34 +13,9 @@
         {% endif %}
     </div>
     <div class="comments__list">
-        {% for comment in comments %}
-            <div class="d-flex">
-                <div class="pr-3 d-none d-sm-block">
-                    <img class="img-fluid rounded-circle user-avatar" src="{{ image_path ~ comment.owner.avatar }}" />
-                </div>
-                <div class="w-100">
-                    <div class="clearfix">
-                        <h5 class="float-left media-heading user_name">{{ comment.owner.firstname }}</h5>
-                        <p class="float-right text-info small">{{ comment.createdAt|ago }}</p>
-                    </div>
-                    <p class="text-success">{{ comment.text }}</p>
-                    {% if is_granted('ROLE_USER') %}
-                    <div class="clearfix">
-                        <div class="float-left">
-                            <div class="btn-group btn-group-sm js-like" data-token="{{ csrf_token('_api') }}">
-                                <a href="{{ path('api_comment_like', {id: comment.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ comment.likeCount }}</span></a>
-                                <a href="{{ path('api_comment_dislike', {id: comment.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ comment.dislikeCount }}</span></a>
-                            </div>
-                        </div>
-                        <div class="float-right">
-                            <a href="#" class="btn btn-sm btn-outline-info px-4"><i class="fas fa-reply"></i></a>
-                        </div>
-                    </div>
-                    {% endif %}
-                    <hr>
-                </div>
-            </div>
-        {% endfor %}
+    {% for comment in comments if not comment.parent %}
+        {{ include('comment/item.html.twig') }}
+    {% endfor %}
     </div>
 </div>
 
