--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -10,17 +10,16 @@
                 <div class="clearfix py-2">
                     <div class="float-left">
                         <img class="img-fluid rounded-circle user-avatar" src="{{ image_path ~ article.author.avatar }}">
-                        <a href="{{ path('user_profile', { username:article.author.username }) }}">{{ article.author.firstname }}</a>
+                        <a href="{{ path('user_profile', { username: article.author.username }) }}">{{ article.author.firstname }}</a>
                     </div>
                     <div class="float-right">
-                        {% if is_granted('EDIT', article) %}
-                            <a href="{{ path('article_edit', { id:article.id }) }}" class="btn btn-sm btn-outline-success"><i class="fas fa-pencil-alt"></i> {{ 'L_EDIT'|transL }}</a>
+                        {% if is_granted('PERM_EDIT', article) %}
+                            <a rel="nofollow" href="{{ path('article_edit', { id: article.id }) }}" class="btn btn-sm btn-outline-success"><i class="fas fa-pencil-alt"></i> {{ 'L_EDIT'|transL }}</a>
                         {% endif %}
                         <ul class="icons-inline text-info small">
                             <li>{{ article.createdAt|date('H:i d.m.Y') }}</li>
                             <li>
-                                <a href="{{ path('api_article_bookmark', { id: article.id }) }}"
-                                   class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}">
+                                <a rel="nofollow" href="#" data-id="{{ article.id }}" class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}">
                                     <i class="fas fa-bookmark"></i><span>{{ article.bookmarkCount }}</span>
                                 </a>
                             </li>
@@ -38,10 +37,10 @@
                 {% if is_granted('ROLE_USER') %}
                 <div class="d-flex justify-content-center">
                     <div class="btn-group btn-group-toggle js-like">
-                        <a href="{{ path('api_article_like', { id: article.id }) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1">
+                        <a rel="nofollow" href="{{ path('api_article_like', { id: article.id }) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1">
                             <i class="fas fa-thumbs-up"></i> <span>{{ article.likeCount }}</span>
                         </a>
-                        <a href="{{ path('api_article_dislike', { id: article.id }) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1">
+                        <a rel="nofollow" href="{{ path('api_article_dislike', { id: article.id }) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1">
                             <i class="fas fa-thumbs-down"></i> <span>{{ article.dislikeCount }}</span>
                         </a>
                     </div>
