--- a/templates/comment/item.html.twig
+++ b/templates/comment/item.html.twig
@@ -12,16 +12,14 @@
             <div class="clearfix">
                 <div class="float-left">
                     <div class="btn-group btn-group-sm js-like">
-                        <a href="{{ path('api_comment_like', { id: comment.id }) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ comment.likeCount }}</span></a>
-                        <a href="{{ path('api_comment_dislike', { id: comment.id }) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ comment.dislikeCount }}</span></a>
+                        <a rel="nofollow" href="{{ path('api_comment_like', { id: comment.id }) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ comment.likeCount }}</span></a>
+                        <a rel="nofollow" href="{{ path('api_comment_dislike', { id: comment.id }) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ comment.dislikeCount }}</span></a>
                     </div>
                 </div>
                 <div class="float-right">
-                    <a href="{{ path('api_comment_reply', { id: comment.id }) }}"
-                       data-toggle="collapse" data-target="#collapse-comment-reply-{{ comment.id }}"
-                       class="btn btn-sm btn-outline-info px-4">
+                    <button data-id="{{ comment.id}}" data-toggle="collapse" data-target="#collapse-comment-reply-{{ comment.id }}" class="btn btn-sm btn-outline-info px-4">
                         <i class="fas fa-reply"></i>
-                    </a>
+                    </button>
                 </div>
             </div>
             <div class="collapse" id="collapse-comment-reply-{{ comment.id }}">
