implement api key authentication

--- a/templates/_include/_client_global_states.html.twig
+++ b/templates/_include/_client_global_states.html.twig
@@ -1,6 +1,6 @@
 <script>
     window.userActiveInterval={{ is_granted('ROLE_USER') ? user_active_interval : 0 }};
-    window.user={
-        username: '{{ app.user ? app.user.username : '' }}'
-    }
+    {% if app.user %}
+        window.user = JSON.parse('{{ app.user|json }}');
+    {% endif %}
 </script>
