--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -26,13 +26,20 @@
         <div class="form-group row">
             {{ form_label(form.aboutMe, '', { label_attr: { class: 'col-form-label col-sm-2' } }) }}
             <div class="col-sm-10">
-                {{ form_errors(form.aboutMe) }}
                 {{ form_widget(form.aboutMe) }}
+                {{ form_errors(form.aboutMe) }}
+            </div>
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.apiKey, '', { label_attr: { class: 'col-form-label col-sm-2' } }) }}
+            <div class="col-md-10">
+                {{ form_widget(form.apiKey) }}
+                {{ form_errors(form.apiKey) }}
             </div>
         </div>
         <div class="form-group row">
             <div class="col-md-10 offset-sm-2">
-                {{ form_widget(form.save) }}
+                {{ form_widget(form.save) }} <button class="btn btn-secondary js-generate-api-key-btn">Generate api key</button>
             </div>
         </div>
     {{ form_end(form) }}
