--- a/templates/user/comments.html.twig
+++ b/templates/user/comments.html.twig
@@ -31,10 +31,7 @@
                     <h6 class="col-md-12 pb-4">No comments</h6>
                 {% endfor %}
             </div>
-            {{ knp_pagination_render(pagination, null, {}, {
-                'position': 'centered',
-                'rounded': true
-            }) }}
+            {% include '_include/_pagination.html.twig' %}
         </div>
     </div>
 {% endblock %}
