--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="signin-form">
-        <form method="post">
+        <form method="post" action="{{ path('app_login') }}">
             <h2>Please sign in</h2>
             <p class="hint-text">You can restore an account by link below</p>
             {% if error %}
